--- a/css/style.css
+++ b/css/style.css
@@ -329,3 +329,9 @@ footer i {
     text-align: center;
   }
 }
+<ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
