--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Custom properties/variables  */
+
 :root {
   --main-white: #f0f0f0;
   --main-red: #be3144;
@@ -6,13 +6,13 @@
   --main-gray: #303841;
 }
 
-/* Base reset */
+
 * {
   margin: 0;
   padding: 0;
 }
 
-/* box-sizing and font sizing */
+
 *,
 *::before,
 *::after {
@@ -21,56 +21,34 @@
 
 html {
   box-sizing: border-box;
-
-  /* Set font size for easy rem calculations
-   * default document font size = 16px, 1rem = 16px, 100% = 16px
-   * (100% / 16px) * 10 = 62.5%, 1rem = 10px, 62.5% = 10px
-  */
   font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
-/* A few media query to set some font sizes at different screen sizes.
- * This helps automate a bit of responsiveness.
- * The trick is to use the rem unit for size values, margin and padding.
- * Because rem is relative to the document font size
- * when we scale up or down the font size on the document
- * it will affect all properties using rem units for the values.
-*/
-
-/* I am using the em unit for breakpoints
- * The calculation is the following
- * screen size divided by browser base font size
- * As an example: a breakpoint at 980px
- * 980px / 16px = 61.25em
-*/
-
-/* 1200px / 16px = 75em */
 @media (max-width: 75em) {
   html {
     font-size: 60%;
   }
 }
 
-/* 980px / 16px = 61.25em */
+
 @media (max-width: 61.25em) {
   html {
     font-size: 58%;
   }
 }
 
-/* 460px / 16px = 28.75em */
+
 @media (max-width: 28.75em) {
   html {
     font-size: 55%;
   }
 }
 
-/* Base styles */
 
 body {
   font-family: 'Poppins', sans-serif;
-  font-size: 1.8rem; /* 18px */
+  font-size: 1.8rem; 
   font-weight: 400;
   line-height: 1.4;
   color: var(--main-white);
@@ -100,15 +78,10 @@ a {
   color: var(--main-white);
 }
 
-img {
-  display: block;
-  width: 100%;
-}
 
-/* nav */
+
 
 .nav {
-  display: flex;
   justify-content: flex-end;
   position: fixed;
   top: 0;
@@ -122,6 +95,7 @@ img {
 .nav-list {
   display: flex;
   margin-right: 2rem;
+  background-color: var(--main-red);
 }
 
 @media (max-width: 28.75em) {
@@ -184,16 +158,7 @@ img {
   }
 }
 
-/* "Automagic" image grid using no media queries */
-.projects-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: 4rem;
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  margin-bottom: 6rem;
-}
+
 
 @media (max-width: 30.625em) {
   .projects-section {
@@ -211,53 +176,13 @@ img {
   border-radius: 2px;
 }
 
-.code {
-  color: var(--main-gray);
-  transition: color 0.3s ease-out;
-}
 
-.project:hover .code {
-  color: #ff7f50;
-}
 
-.project-image {
-  height: calc(100% - 6.8rem);
-  width: 100%;
-  object-fit: cover;
-}
 
-.project-title {
-  font-size: 2rem;
-  padding: 2rem 0.5rem;
-}
 
-.btn {
-  display: inline-block;
-  padding: 1rem 2rem;
-  border-radius: 2px;
-}
 
-.btn-show-all {
-  font-size: 2rem;
-  background: var(--main-gray);
-  transition: background 0.3s ease-out;
-}
 
-.btn-show-all:hover {
-  background: var(--main-red);
-}
 
-.btn-show-all:hover > i {
-  transform: translateX(2px);
-}
-
-.btn-show-all > i {
-  margin-left: 10px;
-  transform: translateX(0);
-  transition: transform 0.3s ease-out;
-}
-
-/* Contact section */
 
 .contact-section {
   display: flex;
@@ -281,30 +206,8 @@ img {
   }
 }
 
-.contact-section-header > p {
-  font-style: italic;
-}
 
-.contact-links {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  max-width: 980px;
-  margin-top: 4rem;
-  flex-wrap: wrap;
-}
 
-.contact-details {
-  font-size: 2.4rem;
-  text-shadow: 2px 2px 1px #1f1f1f;
-  transition: transform 0.3s ease-out;
-}
-
-.contact-details:hover {
-  transform: translateY(8px);
-}
-
-/* Footer */
 
 footer {
   font-weight: 300;
@@ -329,9 +232,3 @@ footer i {
     text-align: center;
   }
 }
-<ul>
-  <li><a href="default.asp">Home</a></li>
-  <li><a href="news.asp">News</a></li>
-  <li><a href="contact.asp">Contact</a></li>
-  <li><a href="about.asp">About</a></li>
-</ul>
